# infraveil-guard

./: .gitignore  PUBLISHING.md  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml  publish-mcp.yml  publish.yml
infraveil_guard/: __init__.py  classify.py  cli.py  core.py  ledger.py  policy.py  server.py  store.py
tests/: test_guard.py
